--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,6 @@ header {
 }
 
 #viewHighScore:hover {
-    /* background-color: yellow; */
     color: var(--pur700);
     font-weight: bold;
 }
@@ -35,7 +34,6 @@ body {
 }
 
 #container {
-    /* background-color: yellow; */
     width: 40%;
     margin: 0 auto;
     margin-top: 100px;
@@ -50,15 +48,18 @@ body {
     margin-bottom: 70px;
 }
 
-.btn {
+.button {
     background-color: var(--pur500);
+    font-size: 1em;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
     color: white;
+    cursor: pointer;
+    transition: 0.2s;
 }
 
-.btn:hover {
+.button:hover {
     background-color: var(--pur700);
 }
 
@@ -66,5 +67,5 @@ body {
     background-color: yellow;
     width: 40%;
     margin: 0 auto;
-    /* margin-top: 100px; */
+    margin-top: 100px;
 }
