added quiz questions and check answers js function

--- a/assets/style.css
+++ b/assets/style.css
@@ -65,13 +65,20 @@ h2 {
     background-color: var(--pur700);
 }
 
-#choices {
-    padding: 30px 0;
+#options {
+    padding-top: 30px;
 }
 
 .choice-button {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+}
+
+#answer-check {
+    font-size: 1.15em;
+    font-style: italic;
+    opacity: 80%;
+    margin-top: 10px;
 }
 
 #hs-container {
