--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-/* universal styling */
 * {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
@@ -111,4 +110,11 @@ h2 {
 
 #clear-btn {
     margin-left: 20px;
+}
+
+@media screen and (max-width: 560px) {
+    #clear-btn {
+        margin: 0px;
+        margin-top: 10px;
+    }
 }
